# booking-service

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  bookings.py  rooms.py  router.py
app/core/: security.py
app/models/: __init__.py  booking.py  room.py  user.py
app/repositories/: booking.py  room.py  user.py
app/schemas/: booking.py  room.py  user.py
app/services/: auth.py  booking.py  room.py
tests/: conftest.py
tests/integration/: test_auth.py  test_bookings.py  test_rooms.py
tests/unit/: test_booking_service.py  test_security.py
